--- a/404.html
+++ b/404.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="UTF-8">
+<meta http-equiv="Content-Type" content="text/html; charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>404</title>
-<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Shadowairing/404_Custom_mp4_0@1.1/img/LOGO.png" />
-<link href="https://cdn.jsdelivr.net/gh/Shadowairing/404_Custom_mp4_0@1.1/css/Location.css" type="text/css" rel="stylesheet">
+<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/Shadowairing/MyBlog_MISC/404_Custom/404_Custom_first_mp4_000/img/LOGO.png" />
+<link href="https://cdn.jsdelivr.net/gh/Shadowairing/MyBlog_MISC/404_Custom/404_Custom_first_mp4_000/css/Location.css" type="text/css" rel="stylesheet">
  <style>
 #jb{animation:change 10s infinite;font-weight:800; }
 @keyframes change{0%{color:#5cb85c;}25%{color:#556bd8;}50%{color:#e40707;}75%{color:#66e616;}100% {color:#67bd31;}}
@@ -23,13 +22,13 @@ h3{
 <canvas height="100%" width="100%" style="position: fixed; top: 0px; left: 0px; opacity: 1;"  id="canvas" class="canvas"></canvas>
 <div id="willerce">
 	<div>
-		<a href="/"><img src="https://cdn.jsdelivr.net/gh/Shadowairing/404_Custom_mp4_0@1.1/img/LOGO.png" id="logo" title="Back to the Tai Chi"/></a>
+		<a href="/"><img src="https://cdn.jsdelivr.net/gh/Shadowairing/MyBlog_MISC/404_Custom/404_Custom_first_mp4_000/img/LOGO.png" id="logo" title="Back to the Tai Chi"/></a>
 		<a href="https://en.wikipedia.org/wiki/HTTP_404" target="_blank" title="What is 404 Not Found"/><h3>404</h3></a>
 	</div>	
 </div>
 <div id="shiping">
 	<video id="bfq">
-		<source src="https://cdn.jsdelivr.net/gh/Shadowairing/404_Custom_mp4_0@1.1/img/1.mp4" type="video/mp4" id="mp4_sp">
+		<source src="https://cdn.jsdelivr.net/gh/Shadowairing/MyBlog_MISC/404_Custom/404_Custom_first_mp4_000/img/1.mp4" type="video/mp4" id="mp4_sp">
 	</video>
 </div>
 
@@ -76,6 +75,6 @@ h3{
     jb();
 </script>
 
-<script src="https://cdn.jsdelivr.net/gh/Shadowairing/404_Custom_mp4_0@1.1/js/Seffects.js" type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/gh/Shadowairing/MyBlog_MISC/404_Custom/404_Custom_first_mp4_000/js/Seffects.js" type="text/javascript"></script>
 </body>
 </html>
